// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-customer-details has a loading state 1`] = `
<ce-customer-details>
  <mock:shadow-root>
    <ce-dashboard-module class="customer-details">
      <span slot="heading">
        Billing Details
        <ce-tag size="small" type="warning">
          Test
        </ce-tag>
      </span>
      <ce-card no-padding="">
        <ce-stacked-list>
          <ce-stacked-list-row mobile-size="0" style="--columns: 2;">
            <div style="padding: 0.5em;">
              <ce-skeleton style="width: 30%; margin-bottom: 0.75em;"></ce-skeleton>
              <ce-skeleton style="width: 20%; margin-bottom: 0.75em;"></ce-skeleton>
              <ce-skeleton style="width: 40%;"></ce-skeleton>
            </div>
          </ce-stacked-list-row>
        </ce-stacked-list>
      </ce-card>
    </ce-dashboard-module>
  </mock:shadow-root>
  <span slot="heading">
    <slot-fb name="heading">
      Test heading
    </slot-fb>
  </span>
</ce-customer-details>
`;

exports[`ce-customer-details has an error state 1`] = `
<ce-customer-details>
  <mock:shadow-root>
    <ce-dashboard-module class="customer-details" error="testmessage">
      <span slot="heading">
        Billing Details
        <ce-tag size="small" type="warning">
          Test
        </ce-tag>
      </span>
      <ce-card no-padding="">
        <ce-stacked-list>
          <slot name="empty">
            You are not a customer.
          </slot>
        </ce-stacked-list>
      </ce-card>
    </ce-dashboard-module>
  </mock:shadow-root>
  <span slot="heading">
    <slot-fb name="heading">
      Test heading
    </slot-fb>
  </span>
</ce-customer-details>
`;

exports[`ce-customer-details renders 1`] = `
<ce-customer-details>
  <mock:shadow-root>
    <ce-dashboard-module class="customer-details">
      <span slot="heading">
        Billing Details
        <ce-tag size="small" type="warning">
          Test
        </ce-tag>
      </span>
      <ce-card no-padding="">
        <ce-stacked-list>
          <ce-stacked-list-row mobilesize="480" style="--columns: 3;">
            <div>
              <strong>
                Billing Name
              </strong>
            </div>
            <div>
              test
            </div>
            <div></div>
          </ce-stacked-list-row>
          <ce-stacked-list-row mobilesize="480" style="--columns: 3;">
            <div>
              <strong>
                Billing Email
              </strong>
            </div>
            <div>
              test@test.com
            </div>
            <div></div>
          </ce-stacked-list-row>
          <ce-stacked-list-row mobilesize="480" style="--columns: 3;">
            <div>
              <strong>
                Billing Address
              </strong>
            </div>
            <div>
              line_1
line_2
city line, wi 53716
undefined
            </div>
          </ce-stacked-list-row>
          <ce-stacked-list-row mobilesize="480" style="--columns: 3;">
            <div>
              <strong>
                Phone
              </strong>
            </div>
            <div>
              1234567890
            </div>
            <div></div>
          </ce-stacked-list-row>
        </ce-stacked-list>
      </ce-card>
    </ce-dashboard-module>
  </mock:shadow-root>
  <span slot="heading">
    <slot-fb name="heading">
      Showing Customer Info
    </slot-fb>
  </span>
</ce-customer-details>
`;
